--- a/src/App.css
+++ b/src/App.css
@@ -1,61 +1,17 @@
-/* #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-} */
-
-
 /* header */
 
 .header{
   display: flex;
   align-items: center;
-  padding: 1.5rem;
-  background: linear-gradient(90.41deg, #711F8D 1.14%, #A818DA 100%);
+  height: 65px;
+  background: linear-gradient(90deg, #672280 1.18%, #A626D3 100%);
   color: white;
+  padding: 20px;
 }
 
 .header--image{
-  width: auto;
-  height: 50px;
-  margin-right: 5px;
+  height: 100%;
+  margin-right: 6px;
 }
 
 .header--title{
@@ -72,30 +28,70 @@
 
 /* form */
 
-main{
-  padding: 36px;
-}
-
-.meme--form{
-  /* background-color: red; */
+.form {
   display: grid;
   grid-template: 40px 40px / 1fr 1fr;
-  padding: 5rem;
-  gap: 15px;
+  gap: 17px;
+  margin-bottom: 17px;
 }
 
-.input--control{
-  /* margin: 0 2rem ; */
-  border: 1px solid #D5D4D8;
+.form--input {
+  font-family: "Karla", sans-serif;
   border-radius: 5px;
+  border: 1px solid #D5D4D8;
   text-indent: 5px;
 }
 
-.form--button{
+.form--button {
   grid-column: 1 / -1;
+  font-family: "Karla", sans-serif;
+  border-radius: 5px;
   background: linear-gradient(90.41deg, #711F8D 1.14%, #A818DA 100%);
   color: white;
   border: none;
-  border-radius: 5px;
   cursor: pointer;
+}
+
+.meme {
+  position: relative;
+  display: flex;
+  justify-content: center;
+}
+
+.meme--image {
+  max-width: 100%;
+  border-radius: 3px;
+}
+
+.meme--text {
+  position: absolute;
+  width: 80%;
+  text-align: center;
+  left: 50%;
+  transform: translateX(-50%);
+  margin: 15px 0;
+  padding: 0 5px;
+  font-family: impact, sans-serif;
+  font-size: 2em;
+  text-transform: uppercase;
+  color: white;
+  letter-spacing: 1px;
+  text-shadow:
+      2px 2px 0 #000,
+      -2px -2px 0 #000,
+      2px -2px 0 #000,
+      -2px 2px 0 #000,
+      0 2px 0 #000,
+      2px 0 0 #000,
+      0 -2px 0 #000,
+      -2px 0 0 #000,
+      2px 2px 5px #000;
+}
+
+.bottom {
+  bottom: 0;
+}
+
+.top {
+  top: 0;
 }
