--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,7 @@
   display: grid;
   grid-template: 40px 40px / 1fr 1fr;
   gap: 17px;
-  margin-bottom: 17px;
+  margin: 15px;
 }
 
 .form--input {
